# dos-rs

./: .gitignore  Cargo.toml  README.md  build-opl.sh  build.sh  bundle.sh  coff-to-djgpp.pl  dos_rs.jsdos  i386-pc-msdos-djgpp.json  i386-unknown-none-gnu.json  i486-unknown-none-gnu.json  i586-unknown-none-gnu.json  i686-pc-msdos-djgpp.json  i686-unknown-none-gnu.json  index.html  install_djgpp-gcc.sh  install_elf2djgpp.sh  link.sh  rust-toolchain  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: ci.yml
assets/: ferris.tif
bundle/: abnormal.vgm  wares.vgm
bundle/.jsdos/: dosbox.conf
djgpp/: Cargo.toml
djgpp/src/: conio.rs  dos.rs  dpmi.rs  errno.rs  go32.rs  lib.rs  malloc.rs  pc.rs  stdio.rs  stdlib.rs
djgpp/src/sys/: djtypes.rs  farptr.rs  mod.rs  nearptr.rs  stat.rs  types.rs
dos_x/: Cargo.toml
dos_x/src/: adlib.rs  allocator.rs  clock.rs  fs.rs  io.rs  key.rs  lib.rs  sb.rs  vga.rs
examples/ferris/: Cargo.toml
examples/ferris/src/: ferris.rs  lib.rs
examples/opl/: Cargo.toml
examples/opl/src/: lib.rs
src/: ferris.rs  lib.rs  main.rs
src/djgpp/: go32.rs  mod.rs  pc.rs  stdlib.rs
src/dos_x/: alloc.rs  key.rs  mod.rs  vga.rs
