[package]
name = "opl"
publish = false
description = "An example of a DOS program that plays some music"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
dos_x = { version = "0.1.0", path = "../../dos_x" }

[dependencies.opbinary]
git = "https://github.com/Enet4/opbinary-rs"
branch = "main"
default-features = false
